--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
+    "mime": "^4.1.0",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.25",
     "react": "19.2.1",
